# cib-mango-tree

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  cibmangotree.py  cibmangotree_gui.py  cibmt.icns  conftest.py  mkdocs.yml  pyinstaller.spec  pylock.toml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-mkdocs.txt  requirements.txt  sitemap.xml  zensical.toml
.ai-context/: README.md  setup-guide.md  symbol-reference.md
.cursor/: mcp.json
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: build_exe.yml  build_gui.yml  build_preview_gui.yml  code_quality.yml  docs.yml  release.yml  release_gui.yml  test.yml
.serena/: project.yml
.serena/memories/: code_structure.md
analyzer_interface/: __init__.py  context.py  interface.py  params.py
analyzers/: __init__.py
analyzers/example/example_base/: main.py
analyzers/hashtags/: test_hashtags_base.py
analyzers/hashtags/hashtags_base/: interface.py  main.py
analyzers/hashtags/test_data/: hashtag_test_output.json
analyzers/ngrams/copypasta_detection/: __init__.py  interface.py  main.py  test_copypasta.py
analyzers/ngrams/ngrams_base/: interface.py  main.py
analyzers/ngrams/ngrams_stats/: main.py
analyzers/ngrams/ngrams_web/: app.py  factory.py  plots.py
analyzers/ngrams/test_data/: message_authors.parquet  ngram_full.parquet
app/: analysis_context.py  project_context.py  shiny.py
components/: analysis_params.py  splash.py
context/: __init__.py
docs/: index.md  license.md
docs/contributing/transition/: README.md  backlog-triage.md  column-type-mapping.md  windows-launch.md  worker-process-boundary.md
docs/guides/contributing/: ai_assisted_dev.md  analyzers.md  github_workflow.md  logging.md  new_contributor_guide.md  profiling.md  testing.md
docs/guides/design-philosophy/: architecture.md  content-domain.md  core-domain.md  edge-domain.md
docs/guides/get-started/: installation.md  overview.md
docs/reference/: components.md  gui.md  importing.md  preprocessing.md  storage.md  terminal_tools.md  testing.md  tokenizer.md
gui/: README.md  base.py  main_workflow.py  session.py  theme.py
gui/.cursor/plans/: gui_behavior_test_plan_5df50d0c.plan.md
gui/components/: __init__.py  analysis.py  analysis_utils.py  import_options.py  manage_analyses.py  manage_projects.py  toggle.py
gui/dashboards/: __init__.py  base_dashboard.py  hashtags.py  hashtags_data.py  ngrams.py  placeholder.py
gui/pages/: __init__.py  analysis_config.py  analysis_config_and_run.py  analysis_dataset.py  analysis_params.py  analysis_post.py  analysis_run.py  analyzer_previous.py  analyzer_select.py  dataset_preview.py  importer.py  project_new.py  project_select.py  start.py
gui/tests/: conftest.py  test_base.py  test_context.py  test_main_workflow.py  test_theme.py
license/: index.html
pr-preview/pr-293/: 404.html  index.html  sitemap.xml
pr-preview/pr-303/: 404.html  index.html  sitemap.xml
pr-preview/pr-318/: index.html
preprocessing/: series_semantic.py
reference/components/: index.html
reference/meta/: index.html
reference/preprocessing/: index.html
reference/testing/: index.html
reference/tokenizer/: index.html
src/cibmangotree/: __init__.py  __main__.py
src/cibmangotree.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
storage/: __init__.py
testing/: context.py  testdata.py
(+273 files in other folders)
