[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cibmangotree"
version = "0.10.0"
description = "Terminal-based social media data analysis tool"
requires-python = ">=3.12"
dependencies = [
    "inquirer>=3.4.0",
    "polars>=1.9.0",
    "pydantic>=2.9.1",
    "platformdirs>=4.3.6",
    "tinydb>=4.8.0",
    "XlsxWriter>=3.2.0",
    "filelock>=3.16.1",
    "plotly>=5.24.1",
    "pandas>=2.2.3",
    "pyarrow>=17.0.0",
    "dash>=2.18.1",
    "colorama>=0.4.6",
    "fastexcel>=0.13.0",
    "shiny>=1.4.0",
    "shinywidgets>=0.6.2",
    "starlette>=0.47.1",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
    "a2wsgi>=1.10.10",
    "python-json-logger>=2.0.7",
    "rich>=14.0.0",
    "regex>=2025.9.1",
    "urllib3>=2.7.0",
]

[dependency-groups]
dev = [
    "pyarrow-stubs>=17.13",
    "black>=24.10.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-benchmark>=5.1.0",
    "pyinstaller>=6.14.1",
    "pip-audit>=2.7.0",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "markdown",
    "pymdown-extensions>=10.15",
    "mkdocs-mermaid2-plugin",
    "griffe_pydantic",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { urllib3 = false }

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "unit: Fast unit tests (< 1s each)",
    "integration: Integration tests with realistic scenarios",
    "config: Configuration and validation tests",
    "multilingual: Language-specific tokenization tests",
    "slow: Tests that take > 1s to run",
]
