[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cibmangotree"
version = "0.11.0"
description = "Interactive social media data analysis tool"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.9.0",
    "pydantic>=2.9.1",
    "platformdirs>=4.3.6",
    "tinydb>=4.8.0",
    "XlsxWriter>=3.2.0",
    "filelock>=3.16.1",
    "pyarrow>=17.0.0",
    "fastexcel>=0.13.0",
    "python-json-logger>=2.0.7",
    "regex>=2025.9.1",
    "urllib3>=2.7.0",
    "nicegui[native]>=3.12.0",
]

[dependency-groups]
dev = [
    "pyarrow-stubs>=17.13",
    "black>=24.10.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.1.0",
    "pytest-asyncio>=1.3",
    "pyinstaller>=6.14.1",
    "pip-audit>=2.7.0",
]
docs = [
    "zensical",
    "mkdocstrings-python",
    "griffe-pydantic",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
cibmangotree = "cibmangotree.gui.__main__:main"
cibmt = "cibmangotree.gui.__main__:main"

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { urllib3 = false }

[tool.black]
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]
# NiceGUI user simulation: empty main_file uses prepare_simulation() inside the user fixture.
main_file = ""
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

markers = [
    "unit: Fast unit tests (< 1s each)",
    "integration: Integration tests with realistic scenarios",
    "config: Configuration and validation tests",
    "multilingual: Language-specific tokenization tests",
    "slow: Tests that take > 1s to run",
]
